windows OS
try to repare windows problems on execution.