@@ -7,15 +7,6 @@ scalaVersion := "2.13.18"
 
 fork := true
 
-// Aligner version JDK sur 17
-javacOptions ++= Seq(
-  "-source", "17", "-target", "17",  
-  "--add-opens=java.base/java.nio=ALL-UNNAMED",
-  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
-  "--add-exports=java.base/java.nio.ch=ALL-UNNAMED",
-  "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
-)
-
 // IMPORTANT : compatibilité avec libs Scala 2.13
 scalacOptions ++= Seq(
   "-language:implicitConversions"
