@@ -21,11 +21,9 @@ object SparkSessionBuilder {
   def build(appName: String): SparkSession = {
     SparkSession.builder()
       .appName(appName)
-      .master("local[*]") // utilise tous les cœurs disponibles
-	    //.config("spark.resources.discoveryPlugin", "") // pas recommandé (bricolage)
+      .master("local[*]") // utilise tous les cœurs disponibles, à retirer en production
       //.config("spark.sql.extensions", "io.delta.sql.DeltaSparkSessionExtension")
-      //.config("spark.sql.catalog.spark_catalog", "org.apache.spark.sql.delta.catalog.DeltaCatalog")
-	    .config("spark.executor.extraJavaOptions", "--add-exports java.base/sun.nio.ch=ALL-UNNAMED")
+      //.config("spark.sql.catalog.spark_catalog", "org.apache.spark.sql.delta.catalog.DeltaCatalog")	  
       .getOrCreate()
   }
 }
